#366: Convert CheckItemSpelling UC to use var